Some default settings were changed. Configuration file for waves-mainnet was added.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -122,7 +122,7 @@ waves {
     # UPnP settings
     upnp {
       # Enable UPnP tunnel creation only if you router/gateway supports it. Useful if your node is runnin in home network. Completely unuseful if you node is in cloud.
-      enable = yes
+      enable = no
 
       # UPnP timeouts
       gateway-timeout = 7s
@@ -218,15 +218,32 @@ waves {
 
   # Matcher settings
   matcher {
+    # Enable/disable matcher
     enable = yes
-    account = none
+
+    # Matcher's account address
+    account = ""
+
+    # Matcher REST API bind address
     bind-address = "127.0.0.1"
+
+    # Matcher REST API port
     port = 6886
+
+    # Minimul allowed order fee
     min-order-fee = 100000
+
+    # Fee of order match transaction
     order-match-tx-fee = 100000
+
+    # Matcher's directories
     journal-directory = ${waves.directory}"/journal"
     snapshots-directory = ${waves.directory}"/snapshots"
+
+    # Snapshots creation interval
     snapshots-interval = 1d
+
+    # Maximum allowed amount of open orders
     max-open-orders = 1000
   }
 
@@ -256,7 +273,7 @@ waves {
     # Enable/disable REST API
     enable = yes
 
-    # Network address to bing to
+    # Network address to bind to
     bind-address = "127.0.0.1"
 
     # Port to listen to REST API requests
