--- a/waves-mainnet.conf
+++ b/waves-mainnet.conf
@@ -8,14 +8,16 @@ waves {
 
   # P2P Network settings
   network {
+    known-peers = ["138.201.152.166:6868", "138.201.152.165:6868", "138.201.152.164:6868", "138.201.152.163:6868", "34.192.116.209:6868", "52.8.147.91:6868", "52.192.108.188:6868", "52.62.212.53:6868", "52.67.63.123:6868"]
+
     # Network address
-    bind-address = "127.0.0.1"
+    bind-address = "0.0.0.0"
 
     # Port number
-    port = 6863
+    port = 6868
 
     # Node name to send during handshake. Comment this string out to set random node name.
-    node-name = "My TESTNET node"
+    #node-name = "My MAINNET node"
 
     # String with IP address and port to send as external address during handshake. Could be set automatically if uPnP is enabled.
     declared-address = ""
@@ -25,7 +27,7 @@ waves {
   # Wallet settings
   wallet {
     # Password to protect wallet file
-    password = "some string as password"
+    password = "ridethewaves!"
 
     # Wallet seed as BASE58 string
     seed = ""
@@ -33,7 +35,7 @@ waves {
 
   # Blockchain settings
   blockchain {
-    type = TESTNET
+    type = MAINNET
   }
 
   # Matcher settings
@@ -53,6 +55,8 @@ waves {
 
   # Node's REST API settings
   rest-api {
+    api-key-hash = "H6nsiifwYKYEx6YzYD7woP1XCn72RVvx6tC1zjjLXqsu"
+
     # Enable/disable node's REST API
     enable = yes
 
@@ -64,5 +68,9 @@ waves {
 
     # Hash of API key string
     api-key-hash = "H6nsiifwYKYEx6YzYD7woP1XCn72RVvx6tC1zjjLXqsu"
+  }
+
+  checkpoints {
+    public-key = "7EXnkmJyz1gPfLJwytThcwGwpyfjzFXC3hxBhvVK4EQP"
   }
 }
