Incorrect default buffer size was fixed.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -51,7 +51,7 @@ waves {
     connection-timeout = 30s
 
     # Network buffer size
-    outbound-buffer-size = 1K
+    outbound-buffer-size = 16M
 
     # Minimal ephemeral port number, used to distiguish incoming connections
     min-ephemeral-port-number = 35368
