Order with explicit AssetPair and orderType

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -245,6 +245,14 @@ waves {
 
     # Maximum allowed amount of open orders
     max-open-orders = 1000
+
+    # Base assets used as price assets
+    base-assets: []
+
+    # Prefefined ordering of base assets
+    base-pairs: []
+
+
   }
 
   # New blocks generator settings
