--- a/waves-testnet.conf
+++ b/waves-testnet.conf
@@ -1,7 +1,7 @@
 # Waves node settins
 waves {
   # Node base directory
-  directory = ${HOME}"/waves"
+  directory = ${HOME}"/waves/testnet"
 
   # Application logging level. Could be DEBUG | INFO | WARN | ERROR. Default value is INFO.
   logging-level = INFO
@@ -49,6 +49,16 @@ waves {
 
     # Matcher REST API port
     port = 6886
+
+    base-assets = [
+      "",
+      ""
+    ]
+
+    predefined-assets-ordering = [
+      {first = "BASE58ADDRESS1", second = 50000000000000},
+      {first = "BASE58ADDRESS2", second = 50000000000000}
+    ]
   }
 
   # Node's REST API settings
@@ -57,7 +67,7 @@ waves {
     enable = yes
 
     # Network address to bind to
-    bind-address = "127.0.0.1"
+    bind-address = "0.0.0.0"
 
     # Port to listen to REST API requests
     port = 6869
