T293: fee added for create alias tx

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -214,6 +214,9 @@ waves {
     lease-cancel {
       WAVES = 100000
     }
+    create-alias {
+      WAVES = 100000
+    }
   }
 
   # Matcher settings
