--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -247,10 +247,10 @@ waves {
     max-open-orders = 1000
 
     # Base assets used as price assets
-    base-assets: []
+    price-assets: []
 
     # Prefefined ordering of base assets
-    base-pairs: []
+    predefined-pairs: []
 
 
   }
