--- a/waves-testnet.conf
+++ b/waves-testnet.conf
@@ -1,7 +1,7 @@
 # Waves node settins
 waves {
   # Node base directory
-  directory = ${HOME}"/waves/testnet"
+  directory = ${HOME}"/waves"
 
   # Application logging level. Could be DEBUG | INFO | WARN | ERROR. Default value is INFO.
   logging-level = INFO
@@ -50,14 +50,23 @@ waves {
     # Matcher REST API port
     port = 6886
 
-    base-assets = [
-      "",
-      ""
+    price-assets = [
+      "WAVES",
+      "7g151iXK8fyxB5sBUHkwQNXhVBuXdbK8ftPB3h1NrrYV",
+      "2aSqCbvCTgvCpwkGsk4mea4tCLG4Zgp69aQDhHNvRUZv",
+      "8zEZuJcKPQmFuYgVe5ZMpxgiPLu5zBhjA6xgdGomQDaP",
+      "D2MNuUyA38pSKoV7F7vpS15Uhw9nw5qfbrGUfCLRNuRo"
     ]
 
-    predefined-assets-ordering = [
-      {first = "BASE58ADDRESS1", second = 50000000000000},
-      {first = "BASE58ADDRESS2", second = 50000000000000}
+    predefined-pairs = [
+      {amountAsset = "WAVES", priceAsset = "7g151iXK8fyxB5sBUHkwQNXhVBuXdbK8ftPB3h1NrrYV"},
+      {amountAsset = "WAVES", priceAsset = "2aSqCbvCTgvCpwkGsk4mea4tCLG4Zgp69aQDhHNvRUZv"},
+      {amountAsset = "WAVES", priceAsset = "8zEZuJcKPQmFuYgVe5ZMpxgiPLu5zBhjA6xgdGomQDaP"},
+      {amountAsset = "WAVES", priceAsset = "D2MNuUyA38pSKoV7F7vpS15Uhw9nw5qfbrGUfCLRNuRo"},
+      {amountAsset = "7g151iXK8fyxB5sBUHkwQNXhVBuXdbK8ftPB3h1NrrYV", priceAsset = "2aSqCbvCTgvCpwkGsk4mea4tCLG4Zgp69aQDhHNvRUZv"},
+      {amountAsset = "7g151iXK8fyxB5sBUHkwQNXhVBuXdbK8ftPB3h1NrrYV", priceAsset = "8zEZuJcKPQmFuYgVe5ZMpxgiPLu5zBhjA6xgdGomQDaP"},
+      {amountAsset = "7g151iXK8fyxB5sBUHkwQNXhVBuXdbK8ftPB3h1NrrYV", priceAsset = "D2MNuUyA38pSKoV7F7vpS15Uhw9nw5qfbrGUfCLRNuRo"},
+      {amountAsset = "8zEZuJcKPQmFuYgVe5ZMpxgiPLu5zBhjA6xgdGomQDaP", priceAsset = "2aSqCbvCTgvCpwkGsk4mea4tCLG4Zgp69aQDhHNvRUZv"}
     ]
   }
 
