WIP. Almost all tests are restored.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -173,6 +173,8 @@ waves {
     #        # Initial balance in smallest units
     #        initial-balance = 100000000000000
     #
+    #        # Initial base target
+    #        initial-base-target =153722867
     #        # List of genesis transactions
     #        transactions = [
     #          {recipient = "BASE58ADDRESS1", amount = 50000000000000},
