Average block delay setting was moved from constants to configuration.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -160,6 +160,8 @@ waves {
     #        allow-unissued-assets-until = 0
     #        allow-burn-transaction-after = 0
     #        require-payment-unique-id-after = 0
+    #        allow-exchange-transaction-after: 0
+    #        allow-createalias-transaction-after: 0
     #      }
     #
     #      # List of genesis transactions
@@ -175,6 +177,10 @@ waves {
     #
     #        # Initial base target
     #        initial-base-target =153722867
+    #
+    #        # Average delay between blocks
+    #        average-block-delay = 60s
+    #
     #        # List of genesis transactions
     #        transactions = [
     #          {recipient = "BASE58ADDRESS1", amount = 50000000000000},
