Use user.home property instead of $HOME

--- a/waves-mainnet.conf
+++ b/waves-mainnet.conf
@@ -1,7 +1,7 @@
 # Waves node settins
 waves {
   # Node base directory
-  directory = ${HOME}"/waves"
+  directory = ${user.home}"/waves"
 
   # Application logging level. Could be DEBUG | INFO | WARN | ERROR. Default value is INFO.
   logging-level = INFO
