--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -52,7 +52,7 @@ akka {
 # Waves node settins
 waves {
   # Node base directory
-  directory = ${HOME}"/waves"
+  directory = ${user.home}"/waves"
 
   # Application logging level. Could be DEBUG | INFO | WARN | ERROR. Default value is INFO.
   logging-level = INFO
