Matcher predefined pairs for DevNet

--- a/waves-devnet.conf
+++ b/waves-devnet.conf
@@ -79,6 +79,25 @@ waves {
 
     # Matcher REST API port
     port = 6886
+
+    price-assets = [
+      "WAVES",
+      "AaFXAN1WTM39XjECHW7DsVFixhq9yMGWHdM2ghr83Gmf",
+      "A2fMWXoSMVCTYi9pmwt5QhHGYM68d4NHTsg94RS3cBWo",
+      "2iiam1a8PwxerAET8Vp57MdnH4kNARXmxUPY4kPV3miE",
+      "DuQ76zE9VziyEizHK8bRMpzWkET2k2pGjkJJuUXaZgcX"
+    ]
+
+    predefined-pairs = [
+      {amountAsset = "WAVES", priceAsset = "AaFXAN1WTM39XjECHW7DsVFixhq9yMGWHdM2ghr83Gmf"},
+      {amountAsset = "WAVES", priceAsset = "A2fMWXoSMVCTYi9pmwt5QhHGYM68d4NHTsg94RS3cBWo"},
+      {amountAsset = "WAVES", priceAsset = "2iiam1a8PwxerAET8Vp57MdnH4kNARXmxUPY4kPV3miE"},
+      {amountAsset = "WAVES", priceAsset = "DuQ76zE9VziyEizHK8bRMpzWkET2k2pGjkJJuUXaZgcX"},
+      {amountAsset = "AaFXAN1WTM39XjECHW7DsVFixhq9yMGWHdM2ghr83Gmf", priceAsset = "A2fMWXoSMVCTYi9pmwt5QhHGYM68d4NHTsg94RS3cBWo"},
+      {amountAsset = "AaFXAN1WTM39XjECHW7DsVFixhq9yMGWHdM2ghr83Gmf", priceAsset = "2iiam1a8PwxerAET8Vp57MdnH4kNARXmxUPY4kPV3miE"},
+      {amountAsset = "AaFXAN1WTM39XjECHW7DsVFixhq9yMGWHdM2ghr83Gmf", priceAsset = "DuQ76zE9VziyEizHK8bRMpzWkET2k2pGjkJJuUXaZgcX"},
+      {amountAsset = "2iiam1a8PwxerAET8Vp57MdnH4kNARXmxUPY4kPV3miE", priceAsset = "A2fMWXoSMVCTYi9pmwt5QhHGYM68d4NHTsg94RS3cBWo"}
+    ]
   }
 
   # Node's REST API settings
