T506: txs apply sequence was fixed

--- a/waves-devnet.conf
+++ b/waves-devnet.conf
@@ -1,7 +1,7 @@
 # Waves node settins
 waves {
   # Node base directory
-  directory = ${HOME}"/waves"
+  directory = "/Volumes/ram_disk"
 
   # Blockchain settings
   blockchain {
@@ -37,7 +37,7 @@ waves {
   }
 
   # Application logging level. Could be DEBUG | INFO | WARN | ERROR. Default value is INFO.
-  logging-level = INFO
+  logging-level = DEBUG
 
   # P2P Network settings
   network {
