--- a/waves-devnet.conf
+++ b/waves-devnet.conf
@@ -21,6 +21,7 @@ waves {
         allow-lease-transaction-after: 0
         require-payment-unique-id-after: 0
         allow-exchange-transaction-after: 0
+        allow-invalid-reissue-in-same-block-until-timestamp: 0
       }
       genesis {
         timestamp: 1488153600000
