Restore base value

--- a/waves-devnet.conf
+++ b/waves-devnet.conf
@@ -1,7 +1,7 @@
 # Waves node settins
 waves {
   # Node base directory
-  directory = "/Volumes/ram_disk"
+  directory = ${HOME}"/waves"
 
   # Blockchain settings
   blockchain {
