Added missing parameter to template.conf

--- a/src/it/resources/template.conf
+++ b/src/it/resources/template.conf
@@ -18,6 +18,7 @@ waves {
         allow-lease-transaction-after = 0
         allow-exchange-transaction-after = 0
         allow-createalias-transaction-after = 0
+        allow-invalid-reissue-in-same-block-until-timestamp = 9223372036854775807
       }
       genesis {
         timestamp = 1489352400000
