Waiting for nodes to connect to each other was added to beforeAll. Docker containers were limited by 2 cores.

--- a/src/it/resources/template.conf
+++ b/src/it/resources/template.conf
@@ -1,5 +1,6 @@
 waves {
   directory = /tmp/waves
+  logging-level = DEBUG
   network.known-peers = []
   blockchain {
     type = CUSTOM
@@ -56,4 +57,5 @@ waves {
     bind-address = 0.0.0.0
     api-key-hash = 7L6GpLHhA5KyJTAVc8WFHwEcyTY8fC8rRbyMCiFnM4i
   }
+  utx.broadcast-interval = 3s
 }
