--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -219,7 +219,7 @@ waves {
   # Matcher settings
   matcher {
     # Enable/disable matcher
-    enable = yes
+    enable = no
 
     # Matcher's account address
     account = ""
