Added pending todo

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -2,7 +2,7 @@ waves.matcher.publicKey = "TestMatcherPubKey"
 
 akka {
   loglevel = "DEBUG"
-  log-config-on-start = on
+  # log-config-on-start = on
 
   persistence {
     journal.plugin = "inmemory-journal"
