--- a/waves-mainnet.conf
+++ b/waves-mainnet.conf
@@ -4,7 +4,7 @@ waves {
   directory = ${user.home}"/waves"
 
   # Application logging level. Could be DEBUG | INFO | WARN | ERROR. Default value is INFO.
-  logging-level = INFO
+  logging-level = DEBUG
 
   # P2P Network settings
   network {
