Upstart & upgrades from 0.3.x

--- a/waves-testnet.conf
+++ b/waves-testnet.conf
@@ -1,8 +1,5 @@
 # Waves node settins
 waves {
-  # Node base directory
-  directory = ${user.home}"/waves"
-
   # Application logging level. Could be DEBUG | INFO | WARN | ERROR. Default value is INFO.
   logging-level = DEBUG
 
@@ -32,9 +29,7 @@ waves {
   }
 
   # Blockchain settings
-  blockchain {
-    type = TESTNET
-  }
+  blockchain.type = TESTNET
 
   # Matcher settings
   matcher {
