Leasing cancel fix.

--- a/waves-devnet.conf
+++ b/waves-devnet.conf
@@ -22,6 +22,8 @@ waves {
         require-payment-unique-id-after: 0
         allow-exchange-transaction-after: 0
         allow-invalid-reissue-in-same-block-until-timestamp: 0
+        allow-multiple-lease-cancel-transaction-until-timestamp: 1492128000000
+        reset-effective-balances-at-height: 4650
       }
       genesis {
         timestamp: 1488153600000
