--- a/src/it/resources/template.conf
+++ b/src/it/resources/template.conf
@@ -20,6 +20,8 @@ waves {
         allow-exchange-transaction-after = 0
         allow-createalias-transaction-after = 0
         allow-invalid-reissue-in-same-block-until-timestamp = 9223372036854775807
+        allow-multiple-lease-cancel-transaction-until-timestamp = 0
+        reset-effective-balances-at-height = 0
       }
       genesis {
         timestamp = 1489352400000
