--- a/waves-mainnet.conf
+++ b/waves-mainnet.conf
@@ -51,7 +51,7 @@ waves {
   # Node's REST API settings
   rest-api {
     # Enable/disable node's REST API
-    enable = yes
+    enable = no
 
     # Network address to bind to
     bind-address = "127.0.0.1"
