T442: separate blockchain/history/checkpoint files

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -139,7 +139,9 @@ waves {
   # Blockchain settings
   blockchain {
     # Path to blockchain file
-    file = ${waves.directory}"/data/blockchain.dat"
+    blockchain-file = ${waves.directory}"/data/waves-blockchain.dat"
+    state-file = ${waves.directory}"/data/waves-state.dat"
+    checkpoint-file = ${waves.directory}"/data/waves-checkpoint.dat"
 
     # Blockchain type. Could be TESTNET | MAINNET | CUSTOM. Default value is TESTNET.
     type = TESTNET
