--- a/waves-mainnet.conf
+++ b/waves-mainnet.conf
@@ -1,7 +1,7 @@
 # Waves node settins
 waves {
   # Application logging level. Could be DEBUG | INFO | WARN | ERROR. Default value is INFO.
-  logging-level = DEBUG
+  logging-level = INFO
 
   # P2P Network settings
   network {
@@ -51,7 +51,7 @@ waves {
   # Node's REST API settings
   rest-api {
     # Enable/disable node's REST API
-    enable = yes
+    enable = no
 
     # Network address to bind to
     bind-address = "127.0.0.1"
