--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -139,9 +139,9 @@ waves {
   # Blockchain settings
   blockchain {
     # Path to blockchain file
-    blockchain-file = ${waves.directory}"/data/waves-blockchain.dat"
-    state-file = ${waves.directory}"/data/waves-state.dat"
-    checkpoint-file = ${waves.directory}"/data/waves-checkpoint.dat"
+    blockchain-file = ${waves.directory}"/data/blockchain.dat"
+    state-file = ${waves.directory}"/data/state.dat"
+    checkpoint-file = ${waves.directory}"/data/checkpoint.dat"
 
     # Blockchain type. Could be TESTNET | MAINNET | CUSTOM. Default value is TESTNET.
     type = TESTNET
