--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -164,6 +164,7 @@ waves {
     #        require-payment-unique-id-after = 0
     #        allow-exchange-transaction-after: 0
     #        allow-createalias-transaction-after: 0
+    #        allow-make-unique-asset-transaction-after: 0
     #      }
     #
     #      # List of genesis transactions
