T702: make unique asset transaction integration test was added

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -228,6 +228,9 @@ waves {
     create-alias {
       WAVES = 100000
     }
+    make-unique-asset {
+      WAVES = 100000
+    }
   }
 
   # Matcher settings
