--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -164,7 +164,7 @@ waves {
     #        require-payment-unique-id-after = 0
     #        allow-exchange-transaction-after: 0
     #        allow-createalias-transaction-after: 0
-    #        allow-make-unique-asset-transaction-after: 0
+    #        allow-make-asset-name-unique-transaction-after: 0
     #      }
     #
     #      # List of genesis transactions
@@ -228,7 +228,7 @@ waves {
     create-alias {
       WAVES = 100000
     }
-    make-unique-asset {
+    make-asset-name-unique {
       WAVES = 100000
     }
   }
