T442: config for minimum-in-memory-diff-blocks

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -143,6 +143,9 @@ waves {
     state-file = ${waves.directory}"/data/state.dat"
     checkpoint-file = ${waves.directory}"/data/checkpoint.dat"
 
+    # Min buffer size. Fast rollback is possible up to this value.
+    minimum-in-memory-diff-blocks = 200
+
     # Blockchain type. Could be TESTNET | MAINNET | CUSTOM. Default value is TESTNET.
     type = TESTNET
 
