WIP: New PeerManager data structure. No tests.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -89,8 +89,14 @@ waves {
     # How long peer stays in blacklist after getting in it
     black-list-residence-time = 10m
 
-    # How many network connections should node handle at once
-    max-connections = 30
+    # How many network inbound network connections can be made
+    max-inbound-connections = 30
+
+    # Number of outbound network connections
+    max-outbound-connections = 30
+
+    # Number of connections from single host
+    max-single-host-connections = 3
 
     # Timeout on network communication with other peers
     connection-timeout = 30s
