--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -252,7 +252,8 @@ waves {
     # Prefefined ordering of base assets
     predefined-pairs: []
 
-
+    # Maximum difference with Matcher server time
+    max-timestamp-diff = 3h
   }
 
   # New blocks generator settings
