--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -278,6 +278,9 @@ waves {
 
     # Prefefined ordering of base assets
     predefined-pairs: []
+
+    # Maximum difference with Matcher server time
+    max-timestamp-diff = 3h
   }
 
   # New blocks generator settings
