T739: allow-transfer-leased-balance-until parameter introd

--- a/waves-devnet.conf
+++ b/waves-devnet.conf
@@ -23,6 +23,7 @@ waves {
         allow-make-asset-name-unique-transaction-after: 0
         allow-multiple-lease-cancel-transaction-until-timestamp: 1492128000000
         reset-effective-balances-at-height: 4650
+        allow-transfer-leased-balance-until: 0
       }
       genesis {
         average-block-delay: 60s
