--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -54,7 +54,7 @@ waves {
   # Node base directory
   directory = ${user.home}"/waves"
 
-  # Application logging level. Could be DEBUG | INFO | WARN | ERROR. Default value is INFO.
+  # Application logging level. Could be TRACE | DEBUG | INFO | WARN | ERROR. Default value is INFO.
   logging-level = INFO
 
   # P2P Network settings
