--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -231,14 +231,15 @@ waves {
     port = 6886
 
     # Minimul allowed order fee
-    min-order-fee = 100000
+    min-order-fee = 300000
 
     # Fee of order match transaction
-    order-match-tx-fee = 100000
+    order-match-tx-fee = 300000
 
     # Matcher's directories
     journal-directory = ${waves.directory}"/journal"
     snapshots-directory = ${waves.directory}"/snapshots"
+    order-history-file = ${waves.directory}"/matcher/orderhistory.dat"
 
     # Snapshots creation interval
     snapshots-interval = 1d
@@ -254,6 +255,9 @@ waves {
 
     # Maximum difference with Matcher server time
     max-timestamp-diff = 3h
+
+    # Migrate OrderHistory to MVStore storage
+    is-migrate-to-new-order-history-storage = no
   }
 
   # New blocks generator settings
