NetworkSeparationTest moved to new suite and repaired.

--- a/src/it/resources/template.conf
+++ b/src/it/resources/template.conf
@@ -4,6 +4,8 @@ waves {
   network {
     known-peers = []
     black-list-residence-time = 1m
+    peers-broadcast-interval = 10s
+    connection-timeout = 10s
   }
   blockchain {
     type = CUSTOM
