Fixes after review

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -264,8 +264,8 @@ waves {
     order-match-tx-fee = 300000
 
     # Matcher's directories
-    journal-directory = ${waves.directory}"/journal"
-    snapshots-directory = ${waves.directory}"/snapshots"
+    journal-directory = ${waves.directory}"/matcher/journal"
+    snapshots-directory = ${waves.directory}"/matcher/snapshots"
     order-history-file = ${waves.directory}"/matcher/orderhistory.dat"
 
     # Snapshots creation interval
