Make migration-to_orderhistory calculable

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -264,9 +264,10 @@ waves {
     order-match-tx-fee = 300000
 
     # Matcher's directories
-    journal-directory = ${waves.directory}"/matcher/journal"
-    snapshots-directory = ${waves.directory}"/matcher/snapshots"
-    order-history-file = ${waves.directory}"/matcher/orderhistory.dat"
+    matcher-directory = ${waves.directory}"/matcher"
+    journal-directory = ${waves.matcher.matcher-directory}"/journal"
+    snapshots-directory = ${waves.matcher.matcher-directory}"/snapshots"
+    order-history-file = ${waves.matcher.matcher-directory}"/orderhistory.dat"
 
     # Snapshots creation interval
     snapshots-interval = 1d
@@ -283,8 +284,6 @@ waves {
     # Maximum difference with Matcher server time
     max-timestamp-diff = 3h
 
-    # Migrate OrderHistory to MVStore storage
-    is-migrate-to-new-order-history-storage = no
   }
 
   # New blocks generator settings
