Better defaults in config file

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -72,7 +72,7 @@ waves {
     #node-name = "default-node-name"
 
     # String with IP address and port to send as external address during handshake. Could be set automatically if uPnP is enabled.
-    declared-address = ""
+    # declared-address = "1.2.3.4:6863"
 
     # Node nonce to send during handshake. Should be different if few nodes runs on the same external IP address. Comment this out to set random nonce.
     #nonce = 0
@@ -138,8 +138,9 @@ waves {
     # Password to protect wallet file
     password = "some string as password"
 
-    # Wallet seed as BASE58 string
-    seed = ""
+    # By default, the node will attemt to generate a new seed. To use a specific seed, uncomment the following line and
+    # specify your base58-encoded seed.
+    # seed = "BASE58SEED"
   }
 
   # Blockchain settings
