--- a/waves-mainnet.conf
+++ b/waves-mainnet.conf
@@ -17,7 +17,7 @@ waves {
     #node-name = "My MAINNET node"
 
     # String with IP address and port to send as external address during handshake. Could be set automatically if uPnP is enabled.
-    declared-address = ""
+    # declared-address = "1.2.3.4:6868"
 
   }
 
