--- a/waves-testnet.conf
+++ b/waves-testnet.conf
@@ -15,7 +15,7 @@ waves {
     node-name = "My TESTNET node"
 
     # String with IP address and port to send as external address during handshake. Could be set automatically if uPnP is enabled.
-    declared-address = ""
+    #declared-address = "1.2.3.4:6863"
 
   }
 
@@ -25,7 +25,7 @@ waves {
     password = "some string as password"
 
     # Wallet seed as BASE58 string
-    seed = ""
+    # seed = "BASE58SEED"
   }
 
   # Blockchain settings
