--- a/waves-devnet.conf
+++ b/waves-devnet.conf
@@ -58,8 +58,7 @@ waves {
     node-name = "My DEVNET node"
 
     # String with IP address and port to send as external address during handshake. Could be set automatically if uPnP is enabled.
-    declared-address = ""
-
+    # declared-address = "1.2.3.4:6864"
   }
 
   # Wallet settings
