Miner should now attempt to generate blocks only when allowed

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -244,20 +244,12 @@ waves {
     # Enable/disable block generation
     enable = yes
 
-    # Enable/disable off-line block generation
-    offline = no
-
-    # How many peers should be connected to node to start block generation
+    # Required number of connections (both incoming and outgoing) to attempt block generation. Setting this value to 0
+    # enables "offline generation".
     quorum = 1
-
-    # How often try to generate new block
-    generation-delay = 15s
 
     # Enable block generation only in the last block is not older the given period of time
     interval-after-last-block-then-generation-is-allowed = 1d
-
-    # Enable/disable TF-Like scheduling
-    tf-like-scheduling = yes
   }
 
   # Node's REST API settings
