Fixed mining in integration tests

--- a/src/it/resources/template.conf
+++ b/src/it/resources/template.conf
@@ -5,7 +5,7 @@ waves {
     known-peers = []
     black-list-residence-time = 1m
     peers-broadcast-interval = 10s
-    connection-timeout = 10s
+    connection-timeout = 1m
   }
   blockchain {
     type = CUSTOM
