--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -303,12 +303,10 @@ waves {
 
   # Unverified transactions pool settings
   utx {
-
     # Pool size
-    size = 10000
-
-    # Random transaction broadcast interval
-    broadcast-interval = 30s
+    max-size = 10000
+    # Evict transaction from UTX pool after it gets older than specified
+    max-transaction-age = 90m
   }
 }
 
