Fix default configs

--- a/waves-mainnet.conf
+++ b/waves-mainnet.conf
@@ -27,7 +27,7 @@ waves {
     password = "ridethewaves!"
 
     # Wallet seed as BASE58 string
-    seed = ""
+    # seed = ""
   }
 
   # Blockchain settings
@@ -39,7 +39,7 @@ waves {
     enable = no
 
     # Matcher's account address
-    account = ""
+    # account = ""
 
     # Matcher REST API bind address
     bind-address = "127.0.0.1"
