--- a/waves-testnet.conf
+++ b/waves-testnet.conf
@@ -37,7 +37,7 @@ waves {
     enable = yes
 
     # Matcher's account address
-    account = ""
+    # account = ""
 
     # Matcher REST API bind address
     bind-address = "127.0.0.1"
