--- a/waves-devnet.conf
+++ b/waves-devnet.conf
@@ -76,7 +76,7 @@ waves {
     enable = true
 
     # Matcher's account address
-    account = ""
+    # account = ""
 
     # Matcher REST API bind address
     bind-address = "0.0.0.0"
