Configurable handshake timeout, less strict blacklisting

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -71,6 +71,12 @@ waves {
     # How often connected peers list should be broadcasted
     peers-broadcast-interval = 2m
 
+    # When accepting connection from remote peer, this node will wait for handshake for no longer than this value. If
+    # remote peer fails to send handshake within this interval, it gets blacklisted. Likewise, when connecting to a
+    # remote peer, this node will wait for handshake response for no longer than this value. If remote peer does not
+    # respond in a timely manner, it gets blacklisted.
+    handshake-timeout = 20s
+
     upnp {
       # Enable UPnP tunnel creation only if you router/gateway supports it. Useful if your node is runnin in home
       # network. Completely unuseful if you node is in cloud.
